fix(styles): Always keep vertical scroll visible to avoid horizontal jank

--- a/system-addon/content-src/activity-stream.scss
+++ b/system-addon/content-src/activity-stream.scss
@@ -13,6 +13,7 @@ body {
   color: $text-primary;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Ubuntu', 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  overflow-y: scroll;
 }
 
 h1,
